export default interface ISuscriptorTemperatura {
    actualizarTemperatura(temperatura : number) : void;
}