@startuml Diagrama

title Diagrama de Clases Observers
skinparam BackgroundColor mintcream
' Relaciones
CentralNuclear *-l- Reactor
CentralNuclear *-- Tablero

Reactor *-- EstadoReactor
Reactor *-- INucleo
Reactor *-- IGenerador

Generador o.. ISuscriptorEnergiaNeta

EstadoReactorCritico o-- ISuscriptorEstadoApagado
EstadoReactorDisminuido o-- ISuscriptorEstadoDisminuido

Nucleo *-- ISensor
Nucleo o-- BarraDeControl

Sensor o-- ISuscriptorTemperatura
Operador o-- Alerta
Tablero o-- Mostrable

' Clases
class CentralNuclear{
    - _instance : CentralNuclear
    - _operadores: Operador[]
    - _reactores: Reactor[]
    - _tableros: tablero[]
    - _estrategia: RefrigerableStrategy
    
    + getInstance()
    + activarMecanismoDeEnfriamiento()
    + agregarOperador(operador : Operador)
    + quitarOperador(operador : Operador)
    + encenderReactor()
    + apagarReactor()
}

class Reactor{
    - _capacidad : number
    - _combustible : ICombustible
    - _estado : EstadoReactor
    - _nucleo : INucleo
    - _generador : IGenerador
    - _energiaProducida : number

    + iniciar()
    + detener()
    + generarEnergia(horas : number)
}

interface IGenerador {
    + generarEnergia(porcentajeCP : number, temp : number) : number
}

interface ISuscriptorEnergiaNeta{
    + actualizarEnergiaNeta(energiaNeta: number):void
}

class Generador implements IGenerador {
    - _energiaNeta: number
    - _suscriptoresEnergiaNeta: ISuscriptorEnergiaNeta[]

    + generarEnergia(porcentajeCP : number, temp : number):number
    + calcularEnergiaNeta(temperactura: number): number
    + suscribir(suscriptor: ISuscriptorEnergiaNeta):void
    + desuscribir(suscriptor: ISuscriptorEnergiaNeta):void
    + notificarEnergiaNeta():void
}

interface ISensor{
    + setTemperaturaReactor(temperatura : number)
    + getTemperaturaReactor () : number
}

class Sensor implements ISensor{
    - _temperaturaReactor : number
    - _suscriptores : ISuscriptorTemperatura[]

    + setTemperaturaReactor(temperatura : number)
    + getTemperaturaReactor () : number
    + suscribir()
    + desuscribir()
    + notificar()
}

interface ISuscriptorTemperatura{
    + actualizarTemperatura(temperatura : number) : void
}

abstract class Tablero implements ISuscriptorEnergiaNeta, ISuscriptorTemperatura{
    # _energiaNeta: Mostrable
    # _temperatura: Mostrable

    + actualizarEnergiaNeta(energiaNeta: number): void
    + actualizarTemperatura(temperatura: number): void 
    + abstract mostrarIndicadores():void
}

class tableroConsola extends Tablero{
    + mostrarIndicadores()
}

class Mostrable{
    - _valor: number
    - _descripcion: string

    + mostrar():string
}

interface INucleo{
    + setTemperatura(temperatura : number)
    + getTemperatura() : number
    + setSensor(sensor : ISensor) 
    + getSensor() : ISensor
    + insertarBarraDeControl(barra : BarrasDeControl) : void
    + sacarBarraDeControl() : void
}

class Nucleo implements INucleo{
    - _barraDeControl : BarrasDeControl
    - _sensor : ISensor
        
    + setTemperatura(temperatura : number)
    + getTemperatura() : number
    + setSensor(sensor : ISensor) 
    + getSensor() : ISensor
    + insertarBarraDeControl(barra : BarrasDeControl) : void
    + sacarBarraDeControl() : void
}

abstract class EstadoReactor{
    # _reactor: Reactor

    + abstract generarEnergia(horas : number) : void
    + setReactor(reactor : Reactor)
}

interface ISuscriptorEstadoDisminuido{
    + recibirAlerta(estado: EstadoReactor)
}

interface ISuscriptorEstadoApagado{
    + recibirAlerta(estado: EstadoReactor)
}
    
class EstadoReactorCritico extends EstadoReactor{
    - _suscriptores : ISuscriptorEstadoApagado[]

    + suscribir(suscriptor : ISuscriptorEstadoApagado)
    + desuscribir(suscriptor : ISuscriptorEstadoApagado)
    + generarEnergia(horas: number): void
    + notificarSrBurns()
    + situacionCritica(): void
}

class EstadoReactorDisminuido extends EstadoReactor{
    - _suscriptores : ISuscriptorEstadoDisminuido[]
    
    + generarEnergia(horas : number): void
    + suscribir(suscriptor : ISuscriptorEstadoDisminuido)
    + desuscribir(suscriptor : ISuscriptorEstadoDisminuido)
    + notificarEstado()
    - puedeGenerarEnergia(horaActual : number, horaLimite : number, cantCombustible : number, temperatura : number) : boolean
}

class Operador implements ISuscriptorEstadoDisminuido{
    - _legajo : number
    - _alerta : Alerta[] = []
    - _strategy : RefrigerableStrategy

    + activarProtocoloDeEnfriamiento()
    + recibirAlerta(estado : EstadoReactor)
}

class SrBurns implements ISuscriptorEstadoApagado{
    -  static instance : SrBurns;
    - _alertas : Alerta[]

    + getInstance(): SrBurns
    + recibirAlerta(estado: EstadoReactor)
}

class Alerta{
    - _estado : EstadoReactor
} 

@enduml
